conociendo elementos html

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>curriculum vitae</title>
+    <title>Luis Perez</title>
 </head>
 <body>
-    
+    <h1>Luis</h1>
+    <p>soy estudiante de la carrera ingenieria de software en la universidad veracruzana</p>
+    <img src="060 (1).png" alt="poliwis">
+    <h2>redes sociales 😮</h2>
+    <a href="https://github.com/luis-pseudo" target="_blank">git</a>
+    <h2>mis habilidades</h2>
+    <ul>
+        <li>programacion</li>
+        <li>java</li>
+    </ul>
 </body>
 </html>
