--- a/index.html
+++ b/index.html
@@ -6,15 +6,44 @@
     <title>Luis Perez</title>
 </head>
 <body>
-    <h1>Luis</h1>
-    <p>soy estudiante de la carrera ingenieria de software en la universidad veracruzana</p>
-    <img src="060 (1).png" alt="poliwis">
-    <h2>redes sociales 😮</h2>
-    <a href="https://github.com/luis-pseudo" target="_blank">git</a>
-    <h2>mis habilidades</h2>
-    <ul>
-        <li>programacion</li>
-        <li>java</li>
-    </ul>
+    <!--barra de navegacion-->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#inicio">inicio</a></li>
+                <li><a href="" target="_blank">git</a></li>
+                <li><a href="" target="_blank">campus</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--seccion de inicio-->
+    <section id="inicio">
+        <h1>Luis</h1>
+        <p>soy estudiante de la carrera ingenieria de software en la universidad veracruzana</p>
+        <img src="060 (1).png" alt="poliwis">
+        
+        
+
+    </section>
+
+    <!--seccion sobre mi-->
+    <section id="sobremi">
+        <h2>redes sociales 😮</h2>
+        <a href="https://github.com/luis-pseudo" target="_blank">github</a>
+
+        <section id="sobremi--habilidades">
+            <h2>mis habilidades</h2>
+            <ul>
+                <li>programacion</li>
+                <li>java</li>
+            </ul>
+        </section>
+    </section>
+
+    <!--pie de pagina-->
+    <footer>
+        <p>2024 Luis Perez. todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
