--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href="#inicio">inicio</a></li>
-                <li><a href="" target="_blank">git</a></li>
-                <li><a href="" target="_blank">campus</a></li>
+                <li><a href="https://github.com/luis-pseudo" target="_blank">git</a></li>
+                <li><a href="https://edu.devf.la/campus/profile" target="_blank">campus</a></li>
             </ul>
         </nav>
     </header>
